--- a/config/database.yml
+++ b/config/database.yml
@@ -15,10 +15,10 @@
 development:
   adapter: postgresql
   encoding: unicode
-  database: demopsql_development
+  database: demopsql
   pool: 5
-  username: demopsql
-  password:
+  host: localhost
+ 
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
